fixes the footer on mobile

--- a/assets/css/app.css
+++ b/assets/css/app.css
@@ -338,6 +338,10 @@ nav {
   color: #313540;
 }
 
+.l-footer-grey {
+	color: #5d657b;
+}
+
 .l-main-red {
   color: #D71F21;
 }
